# Abel-edge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CAPABILITY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  strategies.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
abel_edge/: __init__.py  _runtime_harden.py  cache_cli.py  cli.py  cli_support.py  config.py  paper_state.py  runtime_paths.py  scaffold.py
abel_edge/dashboard/: AGENTS.md  components.py  generator.py  live_overview.py  portfolio.py  price_overlay.py  rows.py  strategy_data.py
abel_edge/engine/: AGENTS.md  adapter_registry.py  base.py  cache.py  decision_context.py  feed_contract.py  feed_loader.py  ledger.py  loader.py  paper_rows.py  price_data.py  runtime_contract.py  signal_contract.py  trader.py
abel_edge/plugins/: AGENTS.md  __init__.py
abel_edge/research/: AGENTS.md  __init__.py  artifact_export.py  bto.py  cli.py  data_readiness.py  evaluate.py  handoff.py  probes.py  promotion_gate.py  state_intent.py  workspace.py
abel_edge/validation/: AGENTS.md  __init__.py  _look_ahead_ast.py  deferred_registry.yaml  gate.py  gate_explain.py  gate_explain_common.py  gate_explain_grandma.py  gate_logic.py  gate_vocabulary.py  look_ahead.py  look_ahead_rules.md  metrics.py  position_ic.py
causal_edge/: __init__.py  _runtime_harden.py  cache_cli.py  cli.py  cli_support.py  config.py  graph_nodes.py  scaffold.py
causal_edge/dashboard/: AGENTS.md  components.py  generator.py  live_overview.py  portfolio.py  price_overlay.py  story.py  strategy_data.py
causal_edge/engine/: AGENTS.md  adapter_registry.py  backtest.py  base.py  cache.py  decision_context.py  feed_contract.py  feed_loader.py  ledger.py  loader.py  price_data.py  runtime_contract.py  signal_contract.py  trader.py
causal_edge/plugins/: AGENTS.md
causal_edge/research/: bto.py  (+9 more)
docs/: abel-price-api.md  add-strategy.md  backtest-kernel-minimal-plan.md  data-feed-contract-plan.md  harness-guide.md  releasing.md  strategy-handoff.md  validation-audit-matrix.md  why-causal.md
strategies/: AGENTS.md
tests/: conftest.py  dashboard_test_utils.py  data_contract_helpers.py  generate_fixtures.py  paper_once_fixtures.py  test_abel_auth.py  test_abel_cap_base_url.py  test_abel_client.py  test_abel_plugin.py  test_adapter_registry_runtime.py  test_backtest_kernel.py  test_causal_edge_compat.py  test_cli.py  test_cli_abel.py  test_dashboard_layout.py  test_dashboard_pages.py  test_dashboard_portfolio_ssot.py  test_data_contract_config.py  test_data_contract_runtime.py  test_decision_context.py  test_engine_cache.py  test_engine_loader.py  test_execution_run.py  test_feed_date_guard.py  test_feed_overlay_example.py  test_gate_vocabulary.py  test_graph_nodes.py  test_ledger.py  test_look_ahead.py  test_metadata.py  test_paper.py  test_paper_feed_cache.py  test_paper_once.py  test_paper_state.py  test_price_data.py  test_probes.py  test_promotion_gate.py  test_research.py  test_research_artifact_export.py  test_research_handoff.py  (+7 more)
(+48 files in other folders)
