[project]
name = "abel-edge"
version = "0.8.3"
description = "Agent-native quant runtime with Abel validation and research handoffs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Abel AI" },
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "optuna>=3.0",
    "plotly>=5.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "click>=8.0",
    "requests>=2.28",
]
keywords = ["abel", "agents", "quant", "validation", "causal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.scripts]
abel-edge = "abel_edge.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1,<2",
    "pytest>=7.0",
    "ruff>=0.4",
    "twine>=5,<7",
]

[project.urls]
Homepage = "https://github.com/Abel-ai-causality/Abel-edge"
Repository = "https://github.com/Abel-ai-causality/Abel-edge"
Documentation = "https://github.com/Abel-ai-causality/Abel-edge/tree/main/docs"
Issues = "https://github.com/Abel-ai-causality/Abel-edge/issues"
Changelog = "https://github.com/Abel-ai-causality/Abel-edge/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["abel_edge*", "causal_edge*", "examples*", "strategies*"]

[tool.setuptools.package-data]
"abel_edge" = [
    "py.typed",
    "validation/deferred_registry.yaml",
    "validation/look_ahead_rules.md",
    "validation/profiles/*.yaml",
    "dashboard/templates/*.html",
]
"examples" = ["causal_demo/*.json"]
"strategies" = ["ethusd_causal/*.json"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 99
target-version = "py311"
